Rewrite Encryption util